# ArcticDownloader-win

./: .gitignore  CHANGELOG_0.1.5.md  CHANGELOG_0.1.7.md  Cargo.toml  version0.1.5_updates  version0.1.7_updates
scripts/: build-release.ps1  release.ps1
src/: app.rs  catalog.rs  config.rs  download.rs  model.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
