[package]
name = "arctic-downloader"
version = "0.1.7"
edition = "2021"
rust-version = "1.76"
authors = ["Arctic Latent"]

[dependencies]
anyhow = "1"
blake3 = "1"
directories = "5"
env_logger = "0.11"
futures = "0.3"
image = "0.25"
log = "0.4"
once_cell = "1.19"
open = "5"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
rfd = "0.15"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.30"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }

[target.'cfg(windows)'.dependencies]
tao = "0.34"
wry = "0.53"
