[package]
name = "arctic-downloader-tauri"
version = "0.1.2"
edition = "2021"
rust-version = "1.76"
authors = ["Arctic Latent"]

[[bin]]
name = "Arctic-ComfyUI-Helper"
path = "src/main.rs"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
env_logger = "0.11"
fs2 = "0.4"
log = "0.4"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tokio = { version = "1", features = ["rt"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
arctic-downloader = { path = ".." }
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"

